--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,7 +81,13 @@ project.ext.react = [
     enableHermes: false,  // clean and rebuild if changing
 ]
 
+// adding specific icons
+project.ext.vectoricons = [
+    iconFontNames: [ 'FontAwesome.ttf', 'Feather.ttf', 'MaterialCommunityIcons.tff', 'Ionicons.tff' ]
+]
+
 apply from: "../../node_modules/react-native/react.gradle"
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
