--- a/package.json
+++ b/package.json
@@ -10,8 +10,40 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.5.2",
+    "@react-navigation/native": "^5.5.1",
+    "@react-navigation/stack": "^5.4.2",
+    "axios": "^0.19.2",
+    "color": "^3.1.2",
+    "lodash": "^4.17.15",
+    "moment": "^2.26.0",
+    "native-base": "^2.13.12",
+    "prop-types": "^15.7.2",
     "react": "16.11.0",
-    "react-native": "0.62.2"
+    "react-native": "0.62.2",
+    "react-native-camera-roll-picker": "^2.0.0",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-gifted-chat": "^0.16.1",
+    "react-native-modal": "^11.5.6",
+    "react-native-multi-slider": "^0.3.6",
+    "react-native-progress": "^4.1.2",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-safe-area-context": "^3.0.2",
+    "react-native-screens": "^2.8.0",
+    "react-native-scrollable-tab-view": "^1.0.0",
+    "react-native-splash-screen": "^3.2.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-textinput-effects": "^0.6.1",
+    "react-native-vector-icons": "^6.6.0",
+    "react-redux": "^7.2.0",
+    "reanimated": "0.0.1-alpha",
+    "redux": "^4.0.5",
+    "redux-form": "^8.3.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
+    "remote-redux-devtools": "^0.5.16",
+    "remotedev-rn-debugger": "^0.8.4"
   },
   "devDependencies": {
     "@babel/core": "7.10.2",
